--- a/escolar/financeiro/templates/financeiro/contrato_form.html
+++ b/escolar/financeiro/templates/financeiro/contrato_form.html
@@ -70,7 +70,7 @@
               <p>{% bootstrap_field form.material_valor %}</p>
               <p>{% bootstrap_field form.material_parcelas %}</p>
               <p>{% bootstrap_field form.data_assinatura %}</p>
-              <p>{% bootstrap_field form.contrato %}</p>
+              <p>{% bootstrap_field form.arquivo %}</p>
             </div>
           </div>
         </div>
