--- a/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
+++ b/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
@@ -26,8 +26,14 @@
            </div>
         </caption>
         {% endif %}
-        {% if object_list and aluno.count_responsavel_financeiro == 0 %}
-        <div class="alert alert-warning">Necessário definir um Responsável Financeiro</div>
+        {% if object_list and aluno.list_pendencias_contrato %}
+          <div class="alert alert-warning">
+            <ul>
+              {% for pendencia in aluno.list_pendencias_contrato %}
+              <li>{{ pendencia }}</li>
+              {% endfor %}
+            </ul>
+          </div>
         {% endif %}
         <thead>
           <tr>
