--- a/escolar/escolas/templates/escolas/autorizado_cadastro.html
+++ b/escolar/escolas/templates/escolas/autorizado_cadastro.html
@@ -23,7 +23,7 @@
         <!-- {# Celular, Tablet, Computador #} -->
         <div class="col-xs-9 col-sm-6 col-md-3">
           <p><b>nome</b>: {{ autorizado.nome }}</p>
-          <p><b>emsil</b>: {{ autorizado.email }}</p>
+          <p><b>email</b>: {{ autorizado.email }}</p>
           <p><b>cel./tel.</b>: {{ autorizado.celular }}</p>
           <p><b>documento</b>: {{ autorizado.documento }}</p>
         </div>
