--- a/escolar/escolas/templates/escolas/aluno_ficha_matricula.html
+++ b/escolar/escolas/templates/escolas/aluno_ficha_matricula.html
@@ -27,69 +27,104 @@
           <p align="center">{{ escola.endereco }}, {{ escola.numero}}, {{ escola.bairro }}</p>
           <p align="center">{{ escola.municipio }}</p>
           <p align="center">{{ escola.telefone }}</p>
-          <table class="table table-striped">
-          <thead>
-            <tr>
-            </tr>
-          </thead>
+          
+
+  <fieldset style="margin-top:0px; border:2px;">
+    <legend></legend>
+    <table style="width: 100%;" class="listing">
         <tbody>
           <tr>
             <td><b>RA:</b> {{ aluno.ra }}<br> <b>Classe:</b> <br><b>Curso:</b> {{ aluno.curso }} <br><b>Turma:</b>  <br> {{ aluno.ano }}</td>
             <td></td>
           </tr>
-          <tr>
-            <td>
-              <b>Nome completo do aluno(a) sem abreviação</b><br>{{ aluno.nome }}:
-            </td>
-          </tr>
-          <tr>
-            <td><b>Naturalidade</b><br>{{ aluno.natural_municipio|default:'--' }}</td>
-            <td><b>Nacionalidade</b><br>{{ aluno.nacionalidade|default:'--' }}</td>
-            <td><b>Data de Nascimento</b><br>{{ aluno.nascimento|date:"d/m/Y" }}</td>
-          </tr>
-          <tr>
-            <td>
-              <b>Endereço</b> <br>{{ aluno.endereco.logradouro }}, {{ aluno.endereco.numero }}
-            </td>
-          </tr>
-          <tr>
-            <td><b>Bairro</b><br>{{ aluno.endereco.bairro|default:'--' }}</td>
-            <td><b>Município - estado</b><br>{{ aluno.endereco.municipio|default:'--' }}</td>
-            <td><b>CEP</b><br>{{ aluno.endereco.cep|default:"--" }}</td>
-          </tr>
-          <tr><td ><b>Responsáveis:</b></td></tr>
-          {% for responsavel in aluno.responsaveis.all %}
-            <tr>
-              <td><b>Nome: </b><br>{{ responsavel.nome }}</td>
-              <td><b>Parentesco:</b><br>{{ responsavel.parentesco }}</td>
-              <td><b>celular:</b><br>{{ responsavel.celular }}</td>
-              <td><b>profissão:</b><br>{{ responsavel.profissao }}</td>
-            </tr>
-            <tr >
-              <td ><b>Empresa em que trabalha: </b><br>{{ responsavel.empresa }}</td>
-              <td ><b>Tel de contato:</b><br>{{ responsavel.telefone_empresa }}</td>
-            </tr>
-            <tr>
-              <td><b>Data de nascimento: </b><br>{{ responsavel.nascimento }}</td>
-              <td><b>RG:</b><br>{{ responsavel.rg }}</td>
-              <td><b>CPF:</b><br>{{ responsavel.cpf }}</td>
-            </tr>
-          {% endfor %}
-
-       </tbody>
+        </tbody>
     </table>
-
-      </div>
+  </fieldset>
+  <fieldset style="margin-top:2px; border:2px;">
+    <legend align="center">FICHA DE MATRÍCULA</legend>
+    <table style="width: 100%;" class="listing">
+      <tbody>
+        <tr>
+          <td>
+            <b>Nome completo do aluno(a) sem abreviação</b><br>{{ aluno.nome }}:
+          </td>
+        </tr>
+        <tr>
+          <td><b>Naturalidade</b><br>{{ aluno.natural_municipio|default:'--' }}</td>
+          <td><b>Nacionalidade</b><br>{{ aluno.nacionalidade|default:'--' }}</td>
+          <td><b>Data de Nascimento</b><br>{{ aluno.nascimento|date:"d/m/Y" }}</td>
+        </tr>
+        <tr>
+          <td>
+            <b>Endereço</b> <br>{{ aluno.endereco.logradouro }}, {{ aluno.endereco.numero }}
+          </td>
+        </tr>
+        <tr>
+          <td><b>Bairro</b><br>{{ aluno.endereco.bairro|default:'--' }}</td>
+          <td><b>Município - estado</b><br>{{ aluno.endereco.municipio|default:'--' }}</td>
+          <td><b>CEP</b><br>{{ aluno.endereco.cep|default:"--" }}</td>
+        </tr>
+        <tr>
+          <td><b>Tel residencial</b><br>{{ aluno.telefone|default:'--' }}</td>
+          <td><b>Recado</b><br> </td>
+          <td><b>Celular</b><br>{{ aluno.celular|default:"" }}</td>
+          <td><b>email</b><br>{{ aluno.email|default:"" }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </fieldset>
+  <fieldset style="margin-top:2px; border:2px;">
+    <legend align="center">Responsáveis</legend>
+    <table style="width: 100%;" class="listing">
+     <tbody>
+      {% for responsavel in aluno.responsaveis.all %}
+        <tr>
+          <td><b>Nome: </b><br>{{ responsavel.nome|default:"" }}</td>
+          <td><b>Parentesco:</b><br>{{ responsavel.parentesco|default:"" }}</td>
+          <td><b>celular:</b><br>{{ responsavel.celular|default:"" }}</td>
+          <td><b>profissão:</b><br>{{ responsavel.profissao|default:"" }}</td>
+        </tr>
+        <tr >
+          <td ><b>Empresa em que trabalha: </b><br>{{ responsavel.empresa|default:"" }}</td>
+          <td ><b>Tel de contato:</b><br>{{ responsavel.telefone_empresa|default:"" }}</td>
+        </tr>
+        <tr>
+          <td><b>Data de nascimento: </b><br>{{ responsavel.nascimento|default:"" }}</td>
+          <td><b>RG:</b><br>{{ responsavel.rg|default:""  }}</td>
+          <td><b>CPF:</b><br>{{ responsavel.cpf|default:""  }}</td>
+        </tr>
+      {% endfor %}
+     </tbody>
+    </table>
+  </fieldset>
   </div>
+  <fieldset style="margin-top:2px; border:2px;">
+    <legend align="center"></legend>
+    <table style="width: 100%;" class="listing">
+     <tbody>
+      <tr>
+        <td><b>Resp. financeiro: </b><br>{{ aluno.get_responsavel_financeiro.nome|default:"" }}</td>
+        <td><b>Contato:</b><br>{{ aluno.get_responsavel_financeiro.celular|default:"" }}</td>
+        <td><b>Email:</b><br>{{ aluno.get_responsavel_financeiro.email|default:"" }}</td>
+        <td><b>Assinatura:</b><br></td>
+      </tr>
+      <tr>
+        <td><b>Resp. pedagógico: </b><br>{{ aluno.get_responsavel_pedagogico.nome|default:"" }}</td>
+        <td><b>Contato:</b><br>{{ aluno.get_responsavel_pedagogico.celular|default:"" }}</td>
+        <td><b>Email:</b><br>{{ aluno.get_responsavel_pedagogico.email|default:"" }}</td>
+        <td><b>Assinatura:</b><br></td>
+      </tr>
+     </tbody>
+   </table>
+ </fieldset>
+</div>
 
   <br>
-  <a href="" class="btn btn-default">
+  <div class="form-actions">
+    <a href="" class="btn btn-default">
     <span class="glyphicon glyphicon-print" aria-hidden="true" ></span>Imprimir</a>
-
-  <!-- aluno_ficha_matricula -->
-    <div class="form-actions">
-      <a href="{% url 'aluno_cadastro' aluno.id %}" class="btn btn-secondary">Voltar para o cadastro {{ aluno.nome }}</a>
-    </div>
+    <a href="{% url 'aluno_cadastro' aluno.id %}" class="btn btn-secondary">Voltar para o cadastro {{ aluno.nome }}</a>
+  </div>
 
 </div>
 {% endblock content %}
