--- a/escolar/escolas/templates/escolas/aluno_ficha_matricula.html
+++ b/escolar/escolas/templates/escolas/aluno_ficha_matricula.html
@@ -21,7 +21,12 @@
   {% include "base_adm.html" %}
     <div class="row-fluid span10">
      {% include "base_aluno.html" %}
-      <div class="row">
+     <br>
+    <div class="form-actions esconde_na_impressao">
+      <a href=""  value="Imprimir" onclick="window.print()" class="btn btn-default">
+        <span class="glyphicon glyphicon-print" aria-hidden="true" ></span>Imprimir</a>
+    </div>
+   
         <br>
         <!-- {# Celular, Tablet, Computador #} -->
         
@@ -30,7 +35,7 @@
           <p align="center">{{ escola.endereco }}, {{ escola.numero}}, {{ escola.bairro }}</p>
           <p align="center">{{ escola.municipio }}</p>
           <p align="center">{{ escola.telefone }}</p>
-          
+
 
   <fieldset style="margin-top:0px; border:2px;">
     <legend></legend>
@@ -119,17 +124,13 @@
      </tbody>
    </table>
  </fieldset>
-  </div>
+</div>
+<br>
+    <div class="form-actions esconde_na_impressao">
+      <a href="{% url 'aluno_cadastro' aluno.id %}" class="btn btn-secondary">Voltar para o cadastro {{ aluno.nome }}</a>
+    </div>
 </div>
 
-  <br>
-  <div class="form-actions esconde_na_impressao">
-    <a href="" class="btn btn-default">
-    <span class="glyphicon glyphicon-print" aria-hidden="true" ></span>Imprimir</a>
-    <a href="{% url 'aluno_cadastro' aluno.id %}" class="btn btn-secondary">Voltar para o cadastro {{ aluno.nome }}</a>
-  </div>
-
-</div>
 {% endblock content %}
 {% block extra_js %}
     {{ form.media }}
