ref #61 MIGRACAO cria o model Responsavel, para unir aluno e membro familia, ce resp pedagogico, resp financeiro; DATAMIGRATION popula a relação pelo m2m responsaveis do model Aluno, ajusta form e urls, e templates pata o novo formato de estrutura de dados

--- a/escolar/core/templates/index.html
+++ b/escolar/core/templates/index.html
@@ -12,9 +12,9 @@
     <div class="container">
     <div class="jumbotron">
       <div class="container">
-        <h3>Gestão</h3>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h3></h3>
+        <p></p>
+        <p></p>
       </div>
     </div>
 
@@ -60,6 +60,6 @@
       <footer>
         <p>&copy; 2017 Company, Inc.</p>
       </footer>
-    </div> <!-- /container -->
+    </div> 
     {% endif %}
 {% endblock content %}
