ref #61 troca o modo de chegar no membrofamilia no choice do contrato; troca o uso dos atributos de mebro para o do responsavel no cadastro de membrofamilia e na listagem de membro familia

--- a/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
+++ b/escolar/escolas/templates/escolas/membros_familia_aluno_list.html
@@ -53,9 +53,9 @@
             {% else %}
               <td>{{ membro.nome }}</td>
             {% endif %}
-            <td>{{ membro.parentesco }}</td>
-            <td>{{ membro.responsavel_financeiro|yesno:"Sim,Não" }}</td>
-            <td>{{ membro.responsavel_pedagogico|yesno:"Sim,Não" }}</td>
+            <td>{{ membro.responsavel.parentesco }}</td>
+            <td>{{ membro.responsavel.responsavel_financeiro|yesno:"Sim,Não" }}</td>
+            <td>{{ membro.responsavel.responsavel_pedagogico|yesno:"Sim,Não" }}</td>
             <td>{{ membro.celular|default:"" }}</td>
             <td>{{ membro.email|default:"" }}</td>
           </tr>
