--- a/escolar/escolas/templates/escolas/membro_familia_cadastro.html
+++ b/escolar/escolas/templates/escolas/membro_familia_cadastro.html
@@ -25,11 +25,11 @@
         <!-- {# Celular, Tablet, Computador #} -->
         <div class="col-xs-9 col-sm-6 col-md-3">
           <p><b>Nome</b>: {{ membro.nome }}</p>
-          <p><b>Parentesco</b>: {{ membro.parentesco }}</p>
           <p><b>Data Nascimento</b>: {{ membro.nascimento }}</p>
-          <p><b>Responsavel financeiro</b>: {{ membro.responsavel_financeiro|yesno:"Sim,Não" }}</p>
-          <p><b>Responsavel pedagógico</b>: {{ membro.responsavel_pedagogico|yesno:"Sim,Não"  }}</p>
           <p><b>Sexo</b>: {{ membro.get_sexo_display }}</p>
+          <p><b>Parentesco</b>: {{ responsavel.parentesco }}</p>
+          <p><b>Responsavel financeiro</b>: {{ responsavel.responsavel_financeiro|yesno:"Sim,Não" }}</p>
+          <p><b>Responsavel pedagógico</b>: {{ responsavel.responsavel_pedagogico|yesno:"Sim,Não"  }}</p>
         </div>
         <div class="col-xs-9 col-sm-6 col-md-3">
           <p><b>Cpf</b>: {{ membro.cpf }}</p>
