--- a/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_aluno_list.html
@@ -65,14 +65,24 @@
           {% else %}
             {{ pagamento.titulo|default:'--' }}
           {% endif %}
+          {% if  pagamento.atrasado %}
+            <br>
+            <small>Multa: R$ {{ pagamento.get_multa|numberformat_br }} </small>
+          {% endif%}
         </td>
-        <td>{{ pagamento.data|date:'d/m/Y' }}</td>
+        <td>
+          {{ pagamento.data|date:'d/m/Y' }}
+          {% if pagamento.atrasado %}
+            <br>
+            <small>Juros R$ {{ pagamento.get_juros|numberformat_br }} </small>
+          {% endif %}
+        </td>
 
         <td>
           <font color="{{ pagamento.get_color_display }}">R$ {{ pagamento.valor|numberformat_br }}</font>
           {% if pagamento.categoria.id == 1 and not pagamento.efet %}
             <br>
-            <small>R$ {{ pagamento.get_valor_com_desconto|numberformat_br }} </small>
+            <small>R$ {{ pagamento.get_valor_a_pagar|numberformat_br }} </small>
           {% endif %}
         </td>
         <td>{{ pagamento.contrato.contratoaluno.responsavel.nome }}/<br>{{ pagamento.contrato.contratoaluno.aluno.nome }}</td>
