--- a/escolar/financeiro/templates/financeiro/pagamentos_list.html
+++ b/escolar/financeiro/templates/financeiro/pagamentos_list.html
@@ -50,7 +50,7 @@
         <th>Título</th>
         <th>Data</th>
         <th>Valor</th>
-        <th>CAtegoria</th>
+        <th>Categoria</th>
         <th>Status</th>
       </tr>
     </thead>
