ref #64 pequenos ajustes no layout do recibo

--- a/escolar/financeiro/templates/financeiro/recibo.html
+++ b/escolar/financeiro/templates/financeiro/recibo.html
@@ -32,9 +32,9 @@
         <img src="{{ escola.logo.url }}" height="50"/>
          <h2 align="center">Recibo</h2>
          <h6 class="center">{{ escola }} CNPJ: {{ escola.cnpj }}</h6>
-         <h5><small>{{ escola.endereco }}, {{ escola.numero }}, {{ escola.bairro }}</small>
-         <h5><small>{{ escola.telefone }}</small></h5>
-         <h5><small>{{ escola.email }}</small></h5>
+         <h5><small>Rua {{ escola.endereco|default:"--" }}, nr {{ escola.numero|default:"--" }}, {{ escola.bairro|default:"--" }}</small>
+         <h5><small>tel. {{ escola.telefone|default:"--" }}</small></h5>
+         <h5><small>email {{ escola.email|default:"--" }}</small></h5>
 
          <p>
           Recebemos de : <b>{{ contrato.responsavel|default:"---" }}</b> 
@@ -45,6 +45,7 @@
           do contrato de serviços educacionais, ano <b>{{ contrato.ano|default:"---" }}</b>
           do(a) aluno(a) <b>{{ contrato.aluno }}</b>
          </p>
+         <p>{{ escola.municipio }}, {{ data|date:"d/m/Y" }}</p>
       </div>
     {% else %}
       <div class="alert alert-warning" role="alert"><i class="glyphicon glyphicon-exclamation-sign"></i> Esse Pagamento ainda não foi efetivado.</div>
