ref #64 envio de email Ok, teste de envio foi feito com sucesso

--- a/escolar/financeiro/templates/financeiro/email_recibo.html
+++ b/escolar/financeiro/templates/financeiro/email_recibo.html
@@ -5,6 +5,7 @@
 <head><title>Recibo</title></head>
   <img src="{{ escola.logo.url }}" height="50"/>
   <p>Prezado {{ contrato.responsavel|default:"---" }}</p>
+  <p>Segue recibo de pagamento:</p>
   <body>
     <h2 align="center">Recibo</h2>
     <h6 class="center">{{ escola }} CNPJ: {{ escola.cnpj }}</h6>
