--- a/escolar/financeiro/templates/financeiro/email_recibo.html
+++ b/escolar/financeiro/templates/financeiro/email_recibo.html
@@ -3,12 +3,12 @@
 <html>
 
 <head><title>Recibo</title></head>
-  <img src="{{ escola.logo.url }}" height="50"/>
+  <img src="cid:main_image" height="50" />
   <p>Prezado {{ contrato.responsavel|default:"---" }}</p>
   <p>Segue recibo de pagamento:</p>
   <body>
     <h2 align="center">Recibo</h2>
-    <h6 class="center">{{ escola }} CNPJ: {{ escola.cnpj }}</h6>
+    <h6 class="center">{{ escola }} CNPJ: {{ escola.cnpj }} </h6>
     <h5><small>Rua {{ escola.endereco|default:"--" }}, nr {{ escola.numero|default:"--" }}, {{ escola.bairro|default:"--" }}</small>
     <h5><small>tel. {{ escola.telefone|default:"--" }}</small></h5>
     <h5><small>email {{ escola.email|default:"--" }}</small></h5>
