ref #64 envia o email e retorna uma msg de acordo com o sucesso ou falha do envio

--- a/escolar/financeiro/templates/financeiro/email_recibo.html
+++ b/escolar/financeiro/templates/financeiro/email_recibo.html
@@ -23,6 +23,6 @@
       do(a) aluno(a) <b>{{ contrato.aluno }}</b>
     </p>
     <p>{{ escola.municipio }}, {{ data|date:"d/m/Y" }}</p>
-    <p></p>
+    <p>{% if user %}{{ user.nome }}{% endif %}</p>
   </body>
 </html>
