ref #64 coloca o título do pagamento no cabeçalho do email

--- a/escolar/financeiro/templates/financeiro/email_recibo.html
+++ b/escolar/financeiro/templates/financeiro/email_recibo.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 
-<head><title>Recibo</title></head>
+<head><title>Recibo: {{ pagamento.titulo|default:"---" }}</title></head>
   <img src="cid:main_image" height="50" />
   <p>Prezado {{ contrato.responsavel|default:"---" }}</p>
   <p>Segue recibo de pagamento:</p>
