--- a/escolar/financeiro/templates/financeiro/email_recibo.html
+++ b/escolar/financeiro/templates/financeiro/email_recibo.html
@@ -3,7 +3,7 @@
 <html>
 
 <head><title>Recibo: {{ pagamento.titulo|default:"---" }}</title></head>
-  <img src="cid:main_image" height="50" />
+  <img src="{{ escola.logo.url }}" height="50"/>
   <p>Prezado {{ contrato.responsavel|default:"---" }}</p>
   <p>Segue recibo de pagamento:</p>
   <body>
