--- a/escolar/escolas/templates/escolas/aluno_cadastro.html
+++ b/escolar/escolas/templates/escolas/aluno_cadastro.html
@@ -31,19 +31,23 @@
       <div class="row">
         <div class="col-md-4">
           <h3><b>Ano</b> : {{ aluno.ano }}</h3>
-          <p><b>RA</b>: {{ aluno.ra }}</p>
-          <p><b>Sexo</b>: {{ aluno.get_sexo_display }}</p>
-          <p><b>Curso</b>: {{ aluno.curso.nome }}</p>
+          <p><b>RA</b>: {{ aluno.ra|default:"--" }}</p>
+          <p><b>Sexo</b>: {{ aluno.get_sexo_display|default:"--" }}</p>
+          <p><b>Curso</b>: {{ aluno.curso.nome|default:"--" }}</p>
           <small>Dados do Aluno:</small>
-          <p><b>Nome</b>: {{ aluno.nome }}</p>
+          <p><b>Nome</b>: {{ aluno.nome|default:"--" }}</p>
           <p><b>CPF</b>: {{ aluno.cpf|default:"--" }}</p>
           <p><b>RG</b>: {{ aluno.rg|default:"--" }} </p>
+          
+          <p><b>RG e ou CPF</b>:{% if aluno.documento %}<a href="{{ aluno.documento.url }}">{{ aluno.get_docs_name }}</a>{% endif %}</p>
+          <p><b>Foto</b>:{% if aluno.foto %}<a href="{{ aluno.foto.url }}">{{ aluno.get_foto_name }}</a>{% endif %}</p>
+       
         </div>
         <div class="col-md-4">
           <p><small>Nascimento</small></p>
-          <p><b>Nacionalidade</b>: {{ aluno.nacionalidade }}</p>
-          <p><b>Natural de</b>: {{ aluno.natural_municipio }}</p>
-          <p><b>data de nascimento</b>: {{ aluno.nascimento }}</p>
+          <p><b>Nacionalidade</b>: {{ aluno.nacionalidade|default:"--" }}</p>
+          <p><b>Natural de</b>: {{ aluno.natural_municipio|default:"--"  }}</p>
+          <p><b>data de nascimento</b>: {{ aluno.nascimento|date:"d/m/Y"|default:"--" }}</p>
           <h3>Contato</h3>
           <p><b>Email</b>: {{ aluno.email|default:"--" }} </p>
           <p><b>Celular</b>: {{ aluno.celular|default:"--" }} </p>
@@ -53,11 +57,11 @@
         </div>
         <div class="col-md-4">
           <h3>Endereço</h3>
-          <p><b>Logradouro</b>: {{ aluno.endereco.logradouro }}</p>
-          <p><b>número</b>: {{ aluno.endereco.numero }}</p>
-          <p><b>bairro</b>: {{ aluno.endereco.bairro }}</p>
-          <p><b>CEP</b>: {{ aluno.endereco.cep }}</p>
-          <p><b>Município</b>: {{ aluno.endereco.municipio }}</p>
+          <p><b>Logradouro</b>: {{ aluno.endereco.logradouro|default:"--" }}</p>
+          <p><b>número</b>: {{ aluno.endereco.numero|default:"--" }}</p>
+          <p><b>bairro</b>: {{ aluno.endereco.bairro|default:"--" }}</p>
+          <p><b>CEP</b>: {{ aluno.endereco.cep|default:"--" }}</p>
+          <p><b>Município</b>: {{ aluno.endereco.municipio|default:"--" }}</p>
         </div>
       </div>
       <!-- glyphicon glyphicon-print  {% url 'aluno_form' escola.id aluno.id %} -->
