ref #65 ordena por Mês e Dia, e filtra por mês

--- a/escolar/escolas/templates/escolas/aniversariantes_list.html
+++ b/escolar/escolas/templates/escolas/aniversariantes_list.html
@@ -29,6 +29,7 @@
       <form class="form-inline well" method="GET" >
         <div class="form-group">
           {% bootstrap_field form.nome %}
+          {% bootstrap_field form.month %}
  
         </div>
         <button type="submit" class="btn btn-primary" title="Filtrar"><i class="glyphicon glyphicon-search"></i></button>
