ref #65 coloca no menu administração, remove o botão novo aluno

--- a/escolar/core/templates/nav_gestor.html
+++ b/escolar/core/templates/nav_gestor.html
@@ -28,10 +28,10 @@
                     <li class="{{ tab_parametros }}"><a href="{% url 'parametro_cadastro' escola.id %}" title="{{ section.name }}">Parâmetros dos Contratos</a></li>
                     <li class="{{ tab_contratos }}"><a href="{% url 'contratos_list' escola.id %}" id='contratos'>Contratos</a></li>
                     <li class="{{ tab_parcelas }}"><a href="{% url 'pagamentos_list' escola.id %}" id='id_movimentos'>Pagamentos</a></li>
+                    <li class="{{ tab_aniversariantes }}"><a href="{% url 'aniversariantes_list' escola.id %}" id='id_movimentos'>Aniversariantes</a></li>
                     <!-- <li><a href="" title="{{ section.name }}">Cartões</a></li> -->
                   </ul>
                 </li>
-                <!-- <li class="{{ tab_parcelas }}"><a href="{% url 'pagamentos_list' escola.id %}" id='id_movimentos'>Pagamentos</a></li> -->
                 <!-- <li class="{{ tab_responsaveis }}"><a href="{% url 'responsaveis_list' escola.id %}">Responsáveis</a></li> -->
                <!--  <li class="{{ tab_autorizados }}"><a href="{% url 'autorizados_list' escola.id %}">Autorizados</a></li> -->
             </li>
